--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-slate
+title: Mindful Practice Blog
+description: Thoughts on mindfully practicing agility and technical excellence
