Added quotes; modified About Me and About this blog sections.

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-slate
 title: Mindful Practice Blog
-description: Thoughts on mindfully practicing agility and technical excellence
+description: Deliberately getting better
