--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 remote_theme: pages-themes/cayman@v0.2.0
 title: Mindful Practice Blog
-description: An ongoing quest to suck less every day
+description: A quest for programs that don't suck
 plugins:
 - jekyll-remote-theme
